<resources>
    <string name="app_name">Submission App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="story_title">Story Title</string>
    <string name="user_name">Nama User</string>
    <string name="welcome_login">Selamat datang, silakan login terlebih dahulu.</string>
    <string name="welcome_tegister">Selamat datang, silakan daftar terlebih dahulu.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
</resources>