<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/login_picture"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:src="@drawable/story_pic" />

        <TextView
            android:id="@+id/login_greeting"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/welcome_login"
            android:textSize="18sp"
            android:alpha="0"
            app:layout_constraintBottom_toTopOf="@+id/user_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_picture"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/tv_login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/email"
            android:textSize="15sp" />

        <com.example.submissionapp.customview.MyEditText
            android:id="@+id/edit_text_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:alpha="0"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/password" />

        <com.example.submissionapp.customview.PasswordEditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:alpha="0"
            android:layout_gravity="start"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp" />

        <com.example.submissionapp.customview.Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:enabled="false" />


        <LinearLayout
            android:alpha="0"
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/don_t_have_account"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:text="@string/register"
                android:textColor="@color/blue_active"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>