<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.512"
        tools:layout_editor_absoluteX="153dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photo_register"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/story_pic"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/register_greet"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_tegister"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="24dp"
            />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:layout_marginHorizontal="24dp"
            />

        <com.example.submissionapp.customview.MyEditText
            android:id="@+id/edit_text_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="24dp"/>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginStart="24dp"
            android:textSize="15sp"/>

        <com.example.submissionapp.customview.MyEditText
            android:id="@+id/edit_text_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="24dp"/>

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"/>

        <com.example.submissionapp.customview.PasswordEditText
            android:id="@+id/edit_text_register_password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginHorizontal="24dp"/>

        <com.example.submissionapp.customview.Button
            android:id="@+id/btn_register"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>