<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_story.AddStoryActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_input"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_input_camera"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/camera"
                android:textColor="@color/white"
                android:background="@color/blue_active"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_input_gallery"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:background="@color/blue_active"
                />

        </LinearLayout>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Story Title"-->
<!--            android:textSize="15dp"-->
<!--            android:fontFamily="@font/montserrat_semibold"-->
<!--            android:layout_marginStart="60dp"/>-->

<!--        <EditText-->
<!--            android:id="@+id/edit_text_input_title"-->
<!--            android:layout_width="300dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textSize="15dp"
            android:fontFamily="@font/montserrat_semibold"
            android:layout_marginStart="60dp"/>

        <EditText
            android:id="@+id/edit_text_input_desc"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_upload"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:background="@color/blue_active"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>